# cmyr-cdk

./: .eslintrc.json  .prettierignore  .prettierrc.json  Pipfile  app.py  cdk.context.json  package-lock.json  package.json  pyproject.toml  setup.py
cdk/: personal_website_stack.py
lambda/: hello.py
lib/: PhotoHostingStack.ts  app.py  app.ts
photoprism/: docker-compose.yml  proxy.conf
